force-app/main/default/objects/copado__Test_Run_Step__c/copado__Test_Run_Step__c.object-meta.xml
<CustomObject>
    <description>The execution of each templated test script step.</description>
    <label>Test Run Step</label>
    <nameField>
        <displayFormat>TRS-{000000}</displayFormat>
        <label>Test Run Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Run Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>