force-app/main/default/objects/copado__Test_Run_Step__c/fields/copado__Actual_Result__c.field-meta.xml
<CustomField>
    <fullName>copado__Actual_Result__c</fullName>
    <label>Actual Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>