force-app/main/default/objects/copado__Test_Run_Step__c/fields/copado__Test_Run__c.field-meta.xml
<CustomField>
    <fullName>copado__Test_Run__c</fullName>
    <label>Test Run</label>
    <referenceTo>copado__Test_Run__c</referenceTo>
    <relationshipLabel>Test Run Steps</relationshipLabel>
    <relationshipName>Test_Run_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>